# des-asm

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  build  examples2html.sh  fizzbuzz.asm
des-asm-web/: Cargo.toml
des-asm-web/src/: lib.rs
docs/: des_asm_web.js  index.html
docs/examples/: all.asm  fizzbuzz.asm  truth.asm
examples/: .bf.asm  bf.asm  dis.asm
src/: index.html  lib.rs
www/: des_asm_web.js  des_asm_web_bg.wasm  index.html
www/examples/: all.as  charset.asm  dis.asm
