[package]
name = "des-asm"
version = "0.1.0"
edition = "2021"
description = "assembler for my desmos cpu"

[workspace]
members = ["des-asm-web"]

[features]
cli = ["clap", "clap-verbosity-flag"]

[[bin]]
name = "cli"
required-features = ["cli"]

[dependencies.clap]
version = "4.0"
features = ["derive", "unicode"]
optional = true

[dependencies.clap-verbosity-flag]
version = "2.0"
optional = true

[dependencies.log]
version = "0.4.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
